--- a/index.html
+++ b/index.html
@@ -10,43 +10,10 @@
 <body>
   <!-- Página Inicial -->
   <header>
-    <h1 id="topo">One Piece - Divulgação</h1>
+    <h1 id="topo">Site em desenvolvimento</h1>
   </header>
-
-  <!-- Links para as outras páginas -->
-  <button><a href="elenco.html">Elenco</a></button>
-  <button><a href="cronologia.html">Guia Cronológico</a></button>
-  <button><a href="https://onepieceofficial.com" target="_blank">Site Oficial</a></button>
-
-  <main>
-    <figure>
-      <img src="img/logo.webp" width="1700" height="auto" alt="Imagem de divulgação de One Piece">
-    </figure>
-    <h2>Diretor: Eiichiro Oda</h2>
-    <h2>Ano de Lançamento: 1999</h2>
-    <hr>
-    <h3><b>Sinopse<b></h3>
-      <section>
-
-        <p>One Piece é um anime e mangá de aventura criado por Eiichiro Oda. A história gira em torno de Monkey D. Luffy, um jovem pirata determinado a encontrar o maior tesouro do mundo, conhecido como "One Piece", e se tornar o Rei dos Piratas. A jornada de Luffy começa quando ele come uma Fruta do Diabo, que lhe concede a habilidade de esticar seu corpo como borracha, mas o impede de nadar. Ele parte em uma jornada épica pelo vasto e perigoso mundo dos mares, repleto de ilhas exóticas, criaturas fantásticas e outros piratas poderosos.</p>
-
-        <p>Ao longo de sua jornada, Luffy forma uma tripulação de amigos leais e habilidosos, conhecida como os Chapéus de Palha. Cada membro da tripulação possui habilidades únicas e sonhos próprios, e eles enfrentam desafios formidáveis juntos enquanto buscam seus objetivos individuais. Enquanto navegam pelos mares, os Chapéus de Palha enfrentam batalhas emocionantes contra outros piratas, marinheiros corruptos e organizações perigosas. Eles encontram diferentes civilizações, conhecem personagens fascinantes e descobrem segredos ocultos sobre o passado e o futuro do mundo.</p>
-
-        <p>Além disso, One Piece aborda temas importantes, como amizade, lealdade, coragem, justiça e liberdade. A história também explora questões mais profundas, como os efeitos da ambição e da ganância, a importância da família e o poder da vontade humana. Com sua narrativa envolvente, personagens carismáticos, ação emocionante e um senso de aventura contagiante, One Piece conquistou uma base de fãs globalmente apaixonada e se tornou um dos animes e mangás mais populares e duradouros da história.</p>
-
-        <p>Em resumo, One Piece é uma jornada épica de piratas em busca do tesouro supremo, repleta de reviravoltas emocionantes, amizades duradouras e uma mensagem inspiradora de perseverança e determinação.</p>
-
-      </section>
-    </main>
-
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/dM7x1PNZDo0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-    <p class="fonte">Confira a abertura "We Are" remasterizada, Especial de 1000 episodios.</p>
-
-
-    <button class="buton"><a href="#topo">Voltar ao topo</a></button>
-
     <footer>
-      <p>Desenvolvido por Felipe Nascimento Melo | Trabalho de Front-end1 - IFMS Dourados</p>
+      <p>Copyright © 2024 Naslon® Todos os direitos reservados.</p>
     </footer>
   </body>
 
