--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <!-- Desenvolvido por Felipe Nascimento -->
 <head>
-  <title>One Piece</title>
+  <title>Em desenvolvimento</title>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="css/style1.css">
 </head>
@@ -10,7 +10,7 @@
 <body>
   <!-- Página Inicial -->
   <header>
-    <h1 id="topo">Site em desenvolvimento</h1>
+    <h1 id="topo">Em desenvolvimento</h1>
   </header>
     <footer>
       <p>Copyright © 2024 Naslon® Todos os direitos reservados.</p>
