--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1 id="topo">Em desenvolvimento</h1>
   </header>
     <footer>
-      <p>Copyright © 2024 Naslon® Todos os direitos reservados.</p>
+      <p>Copyright © 2024 Naslon Brasil - Todos os direitos reservados.</p>
     </footer>
   </body>
 
