--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Em desenvolvimento</title>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="css/style1.css">
-  <link rel="shortcut icon" type="image/x-icon" href="img/N.ico">
+  <link rel="shortcut icon" type="image/x-icon" href="img/icon.ico">
 </head>
 
 <body>
