--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- Página Inicial -->
   <header>
-    <h1 id="topo">Em desenvolvimento</h1>
+    <h1 id="topo">Em desenvolvimento...</h1>
   </header>
     <footer>
       <p>Copyright © 2024 Naslon Brasil - Todos os direitos reservados.</p>
