--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Em desenvolvimento</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="css/style1.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="shortcut icon" type="image/x-icon" href="img/icon.ico">
 </head>
 <body>
