--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
   <title>Em desenvolvimento</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="shortcut icon" type="image/x-icon" href="img/icon.ico">
 </head>
 <body>
   <header>
     <h1 id="topo">Em desenvolvimento...</h1>
   </header>
+  <div id="complemento"></div>
     <footer>
       <p>Copyright © 2024 Naslon Brasil - Todos os direitos reservados.</p>
     </footer>
