--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1 id="topo">Em desenvolvimento...</h1>
+    <h1 id="topo">Laçamento dia 01/03/25</h1>
   </header>
   <div id="complemento"></div>
     <footer>
