--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="pt-br">
 <!-- Desenvolvido por Felipe Nascimento -->
 <head>
-  <title>Em desenvolvimento</title>
+  <title>Lançamento dia 01/03/2025</title>
   <meta charset="utf-8">
   <link rel="shortcut icon" type="image/x-icon" href="img/icon.ico">
 </head>
 <body>
   <header>
-    <h1 id="topo">Laçamento dia 01/03/25</h1>
+    <h1 id="topo">Lançamento dia 01/03/2025</h1>
   </header>
   <div id="complemento"></div>
     <footer>
