--- a/index.html
+++ b/index.html
@@ -14,5 +14,10 @@
     <footer>
       <p>Copyright © 2024 Naslon Brasil - Todos os direitos reservados.</p>
     </footer>
+  <script>
+        window.onload = function() {
+            alert("Smartphones ou Tablets poderão ter problemas ao acessar!\n\nJá estamos trabalhando na correção...");
+        };
+    </script>
 </body>
 </html>
