correção de texto

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	</div>
 	<script>
         window.onload = function() {
-            alert("Smartphones ou Tablets poderão ter problemas ao acessar!\n\nJá estamos trabalhando na correção...");
+            alert("Infelizmente smartphones e Tablets poderão ter problemas ao acessar!\n\nJá estamos trabalhando na correção...");
         };
     </script>
 
