--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					<div id="extras"></div>
 					<div id="extras"><a href="contatos.html" id="link">Contatos</a></div>
 					<div id="extras"><a href="pesquisas.html" id="link">Pesquisas</a></div>
-					<div id="extras"><a href="Patrocinadores.html" id="link">Patrocinadores</a></div>
+					<div id="extras"><a href="patrocinadores.html" id="link">Patrocinadores</a></div>
 					<div id="extras"><a href="local.html" id="link">Unidades Naslon</a></div>
 					<div id="extras"><a href="trabalhe.html" id="link">Trabalhe conosco futuramente</a></div>
 					<div id="extras"></div>
